// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > render a default divider 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___zqp2wz0_1qd7sik f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj fzynn9s fekrn8e f1kyqvp9 fesgyo"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Divider > render a divider with content 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___1j6brfu_j4hmdq0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
       Default Divider 
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > render a divider with inset 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___18pnqhe_1wr80yx f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj fjlbh76 f11qrl6u f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
       Inset 
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a brand appearance 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___1qzrrl0_pfdz3z0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 f16muhyy fcbuu2a f1wdw2dr f1582fpk f1ttio3w f1ahrvm8 f1cd3wbc fvrapl0 f17hbk9y fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
       brand 
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a divider with a different color 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___zqp2wz0_1qd7sik f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj fzynn9s fekrn8e f1kyqvp9 fesgyo"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Divider > renders a horizontal divider with a fixed width 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___1j6brfu_j4hmdq0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
    style="width: 100px;"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
      fixed 100px width
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a strong appearance 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___1lvu9bz_1afltod f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 f19n0e5 f49u1sd f15r6k83 fulozs0 f1dwzvs7 f1d62qoy fveed76 f1na94ji f1sc1lgi fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
      Strong
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a subtle appearance 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___1a7xcxi_1tz63uq f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 f11d4kpn f167iojj feq1vlq fbgdwbc f406ipf f1ac0ien f1d8mb5j fr7c99q f1h0o9c0 fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
       subtle 
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a vertical divider 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="autumn-ui-Divider ___1hl26kc_1wjhc85 f122n59 f1ewtqcl f22iagw f1vx9l62 fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw f16gbxbe f1yq6w5o f9sc749 f1zq0ye flthirb f13hvwk3 f1aywhqu f1kyqvp9 fesgyo fzynn9s fekrn8e"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Divider > renders a vertical divider with a fixed height 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="autumn-ui-Divider ___bo0qa10_x4cttf0 f122n59 f1ewtqcl f22iagw f1vx9l62 fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw f1tjaq3g f1yq6w5o f9sc749 f1zq0ye flthirb f13hvwk3 f1aywhqu fg2pwug f8vk40g"
    role="separator"
    style="height: 100px;"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
      fixed 100px height
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a vertical divider with content 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="autumn-ui-Divider ___bo0qa10_x4cttf0 f122n59 f1ewtqcl f22iagw f1vx9l62 fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw f1tjaq3g f1yq6w5o f9sc749 f1zq0ye flthirb f13hvwk3 f1aywhqu fg2pwug f8vk40g"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
      Vertical
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders content center aligned 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___1j6brfu_j4hmdq0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
      Center
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders content end aligned 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___1wi9o4m_b5iu8j0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t fzhtfnv faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1iwjod4 f12w1bnb f1ayce8x f1ojjlep"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
      End
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders content start aligned 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="autumn-ui-Divider ___752elr0_s5483p0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1iwjod4 faj9fo0 fas4plv fdei6ha f616ijr f18vlbya f1e0o83g fzmiljt f1popb8h f1gpfzhw fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj fzhtfnv f1ojjlep f1he2m4d f12w1bnb"
    role="separator"
  >
    <span
      class="autumn-ui-Divider_wrapper"
    >
      Start
    </span>
  </div>
</DocumentFragment>
`;
